frontend/tests/errors/ER-009/bitwise_logical_mix/test.vx
// @rfc: docs/vexel-rfc.md#errors--diagnostics
// @desc: Ambiguous parsing examples include nested conditionals and complex expressions | Ambiguous parsing example: mixed bitwise operators


&^main() -> #i32 {
    // Mixing comparisons inside logical expressions without parentheses is ambiguous
    result:#b = 1 && 1 < 2 < 3;
    0;
}
